chore: update swagger docs and cleanup dev-server
